--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,7 @@ a:hover {
     font-weight: 700;
     font-size: 36px;
     line-height: 150%;
+    margin-bottom: 24px;
 }
 
 .title-m {
@@ -118,17 +119,16 @@ input {
 }
 
 .btn {
-    padding: 12px 16px;
+    padding: 16px 32px;
     font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.05em;
-    text-transform: uppercase;
-    color: #50351D;
-    background: #F2E9D4;
-    -webkit-box-shadow: 4px 4px 0px #DED6C3;
-       -moz-box-shadow: 4px 4px 0px #DED6C3;
-            box-shadow: 4px 4px 0px #DED6C3;
+    font-size: 16px;
+    line-height: 24px;
+    background: #080808;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    color: #fff;
+    display: inline-block;
 }
 
 .btn:hover {
@@ -275,3 +275,115 @@ input {
  .header__nav ul > .menu-item.transp a {
     opacity: .3;
  }
+
+
+ /* ---main--- */
+
+ .main {
+     padding: 134px 0 164px;
+     border-bottom: 4px solid #F4F4F4;
+ }
+ .main .title {
+     margin-bottom: 24px;
+ }
+ .main p {
+     line-height: 170%;
+     margin-bottom: 44px;
+ }
+
+ /* ----how---- */
+
+ .how {
+     padding: 140px 0;
+ }
+ .how p {
+     line-height: 170%;
+     margin-bottom: 40px;
+ }
+ .how__wrap {
+     display: -webkit-box;
+     display: -webkit-flex;
+     display: -moz-box;
+     display: -ms-flexbox;
+     display: flex;
+     -webkit-flex-wrap: wrap;
+         -ms-flex-wrap: wrap;
+             flex-wrap: wrap;
+ }
+ .how__card {
+     width: 50%;
+     display: -webkit-box;
+     display: -webkit-flex;
+     display: -moz-box;
+     display: -ms-flexbox;
+     display: flex;
+     padding: 40px 40px 40px 28px;
+     border-bottom: 1px solid rgba(0,0,0,0.1);
+ }
+ .how__card:hover {
+     text-decoration: none;
+ }
+ .how__card:nth-child(2n-1) {
+     border-right: 1px solid rgba(0,0,0,0.1);
+ }
+ .how__card:nth-last-child(2) {
+     border-bottom: none;
+ }
+ .how__card:last-child {
+    border-bottom: none;
+}
+.how__card svg {
+    min-width: 32px;
+    margin-right: 24px;
+}
+.how__card-txt {
+    display: block;
+}
+.how__card-txt .title-s {
+    margin-bottom: 12px;
+    display: block;
+}
+.how__card-txt p {
+    font-size: 14px;
+    line-height: 150%;
+    color: #080808;
+    opacity: 0.6;
+}
+
+/* -----develop----- */
+.develop {
+    padding: 140px 0;
+    background: #0E0E0E;
+    color: #fff;
+}
+.develop p {
+    margin-bottom: 70px;
+    line-height: 170%;
+}
+.develop__wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+       -moz-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+.develop__card {
+    width: 25%;
+}
+.develop__card svg {
+    margin-bottom: 12px;
+}
+.develop__card span {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 170%;
+    display: block;
+}
