--- a/css/main.css
+++ b/css/main.css
@@ -132,20 +132,57 @@ input {
 }
 
 .btn:hover {
-   background: #f6efe1;
+    background: #2d2d2d;
    text-decoration: none;
 }
 .btn__sec {
-    background: #FEF759;
-    -webkit-box-shadow: 4px 4px 0px #EFE844;
-       -moz-box-shadow: 4px 4px 0px #EFE844;
-            box-shadow: 4px 4px 0px #EFE844;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #080808;
+    background: #FFFFFF;
+    border: 2px solid #000000;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -moz-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 20px 57px 20px 47px;
+}
+.btn__sec svg {
+    margin-left: 10px;
 }
 .btn__sec:hover {
-    background:#fef98b;
+    background: #080808;
+    border: 2px solid #080808;
+    color: #fff;
+    text-decoration: none;
+}
+.btn__sec:hover svg path {
+    fill: #fff;
 }
 .center {
     text-align: center;
+}
+path {
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+}
+p {
+    line-height: 170%;
 }
 
 /* ---------------breadcrumbs----------------- */
@@ -287,7 +324,6 @@ input {
      margin-bottom: 24px;
  }
  .main p {
-     line-height: 170%;
      margin-bottom: 44px;
  }
 
@@ -297,7 +333,6 @@ input {
      padding: 140px 0;
  }
  .how p {
-     line-height: 170%;
      margin-bottom: 40px;
  }
  .how__wrap {
@@ -345,7 +380,7 @@ input {
 }
 .how__card-txt p {
     font-size: 14px;
-    line-height: 150%;
+    line-height: 150% !important;
     color: #080808;
     opacity: 0.6;
 }
@@ -358,7 +393,6 @@ input {
 }
 .develop p {
     margin-bottom: 70px;
-    line-height: 170%;
 }
 .develop__wrap {
     display: -webkit-box;
@@ -386,4 +420,482 @@ input {
     font-size: 16px;
     line-height: 170%;
     display: block;
+}
+
+/* -----proud--- */
+
+.proud {
+    padding: 140px 0;
+}
+.proud p {
+    margin-bottom: 72px;
+}
+.proud__item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-bottom: 1px solid #E5E5E5;
+}
+.proud__item:hover .proud__item-right {
+    background: #F4F4F4;
+}
+.proud__item:first-child {
+    border-top: 1px solid #E5E5E5;
+}
+.proud__item-left {
+    padding: 72px 40px 72px 0;
+    width: 60%;
+}
+.proud__item-right {
+    width: 40%;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    background: #FBFBFB;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
+.proud__item-link {
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -moz-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 14px;
+    line-height: 16px;
+    color: #737373;
+    margin-bottom: 16px;
+}
+.proud__item-link svg {
+    margin-left: 9px;
+}
+.proud__item-link:hover {
+    color: #080808;
+    text-decoration: none;
+}
+
+.proud__item-link:hover svg path {
+    fill: #080808;
+}
+.proud__item-left .title-m {
+    margin-bottom: 12px;
+}
+.proud__item-left p {
+    margin-bottom: 48px;
+    color: #737373;
+}
+.proud__item-wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+.proud__item-poc:not(:last-child) {
+    margin-right: 51px;
+}
+.proud__item-poc span {
+    display: block;
+    font-size: 14px;
+    line-height: 160%;
+    color: #737373;
+}
+
+.proud__item-perc {
+    font-size: 18px !important;
+    font-weight: 500;
+    line-height: 16px !important;
+    margin-bottom: 8px;
+    color: #080808 !important;
+}
+.proud__wrap .btn__sec {
+    margin-top: 72px;
+}
+
+
+
+/* -----rev----- */
+
+.rev {
+    background: #090909;
+    padding: 140px 0 101px;
+    color: #fff;
+}
+.rev .title-l {
+    margin-bottom: 48px;
+}
+.rev__wrap {
+    margin-bottom: 94px;    
+}
+.rev__card p {
+    margin-bottom: 40px;
+    font-size: 24px;
+    line-height: 150%;
+}
+.rev__card-name {
+    display: block;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 170%;
+    margin-bottom: 4px;
+}
+.rev__card-who {
+    font-size: 14px;
+    line-height: 150%;
+    opacity: 0.7;
+}
+
+.rev__upr {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+.count {
+    margin: 0 46px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 150%;
+    letter-spacing: 0.05em;
+}
+.count__sep {
+    margin: 0 3px;
+}
+.rev__upr-arr {
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.rev__upr-arr.transp {
+    opacity: 0.2;
+}
+
+/* ---facts---- */
+
+.facts {
+    padding: 96px 0;
+    background: #0E0E0E;
+    color: #fff;
+}
+.facts .title-l {
+    margin-bottom: 48px;
+}
+.facts__wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+}
+.facts__item {
+    width: 25%;
+    font-size: 14px;
+    line-height: 170%;
+}
+.facts__item span {
+    display: block;
+    font-size: 36px;
+    line-height: 170%;
+}
+
+/* ----hiring---- */
+
+.hiring {
+    padding: 96px 0 140px;
+    background: #090909;
+    color: #fff;
+}
+.hiring .title-l {
+    margin-bottom: 32px;
+}
+.hiring__item {
+    display: block;
+    position: relative;
+    padding: 30px 0 28px;
+    border-bottom: 2px solid rgba(255,255,255,0.1);
+    color: #fff;
+}
+.hiring__item:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 22px;
+    bottom: 0;
+    margin: auto 0;
+    width: 10px;
+    height: 8px;
+    background: url('../img/svg/arrow.svg') no-repeat 0 0 / cover;
+}
+.hiring__item:hover {
+    border-bottom-color: #fff;
+    text-decoration: none;
+}
+.hiring__item span {
+    display: block;
+}
+.hiring__tit {
+    margin-bottom: 4px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 170%;
+}
+.hiring__txt {
+    font-size: 14px;
+    line-height: 170%;
+    color: #737373;
+}
+
+/* ------method------ */
+
+
+.method {
+    padding: 140px 0;
+}
+.method .title-l {
+    margin-bottom: 64px;
+}
+.method__wrap {
+    margin-bottom: 96px;
+    counter-reset: itemli;
+}
+.method__item {
+    padding-left: 56px;
+    position: relative;
+}
+.method__item::before {
+    content: counter(itemli)'';
+    counter-increment: itemli;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    top: 6px;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    -webkit-border-radius: 50%;
+       -moz-border-radius: 50%;
+            border-radius: 50%;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    border: 2px solid #080808;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 150%;
+}
+.method__item:not(:last-child) {
+    margin-bottom: 48px;    
+}
+.method__item p {
+    color: #737373;
+}
+.method__item strong {
+    margin-bottom: 8px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 150%;
+}
+
+.method__auth {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+       -moz-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+.method__left {
+    width: 44%;
+}
+.method__right {
+    width: 50%;
+}
+
+.method__auth-wrap {
+    padding: 32px 48px 96px 0;
+    border-right: 1px solid #E3E3E3;
+    border-bottom: 1px solid #E3E3E3;
+}
+.method__img img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+.method__name {
+    font-weight: 700;
+    color: #000;
+    font-size: 20px;
+    line-height: 170%;
+    margin-bottom: 4px;
+}
+.method__who,
+.method__pub {
+    font-size: 14px;
+    line-height: 150%;
+    color: rgba(0,0,0,0.5);
+}
+.method__who {
+    margin-bottom: 64px;
+}
+.method__pub {
+    margin-bottom: 20px;
+}
+.method__left ul li:not(:last-child) {
+    margin-bottom: 20px;
+}
+.method__left ul li {
+    padding-left: 25px;
+    position: relative;
+}
+.method__left ul li svg {
+    position: absolute;
+    left: 0;
+    top: 6px;
+}
+.method__left ul li a {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 130%;
+    letter-spacing: 0.01em;
+    color: #080808;
+}
+.method__left ul li a:hover {
+    text-decoration: none;
+}
+.method__left ul li svg {
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.method__left ul li:hover svg {
+    opacity: 1;
+}
+.method__right .title-l {
+    margin-bottom: 16px;
+}
+.method__right p:not(:last-child) {
+    margin-bottom: 12px;
+}
+
+
+/* ----faq---- */
+
+.faq {
+    background: #080808;
+    padding: 140px 0;
+    color: #fff;
+}
+.faq .title-l {
+    margin-bottom: 32px;
+}
+.faq__card {
+    padding: 32px 0;
+    cursor: pointer;
+    border-bottom: 2px solid rgba(255,255,255,0.1);
+}
+.faq__title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 170%;
+    color: #FFFFFF;
+    position: relative;
+    padding-right: 22px;
+}
+.faq__title::before,
+.faq__title::after {
+	-webkit-border-radius: 2px;
+	   -moz-border-radius: 2px;
+	        border-radius: 2px;
+	background: #fff;
+	content: '';
+	display: block;
+	position: absolute;
+	-webkit-transition: all 0.3s ease;
+	-o-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+.faq__title::before {
+	top: 10px;
+    right: 22px;
+	width: 13px;
+	height: 3px;
+}
+.faq__title::after {
+	top: 5px;
+	right: 27px;
+	height: 13px;
+	width: 3px;
+}
+.faq__card p {
+    display: none;
+    margin-top: 24px;
+    width: 92%;
+}
+.faq__title.open::before {
+	-webkit-transform: rotateZ(360deg);
+	-moz-transform: rotateZ(360deg);
+	-ms-transform: rotate(360deg);
+	-o-transform: rotateZ(360deg);
+	transform: rotateZ(360deg);
+}
+.faq__title.open::after {
+	-webkit-transform: rotateZ(450deg);
+	-moz-transform: rotateZ(450deg);
+	-ms-transform: rotate(450deg);
+	-o-transform: rotateZ(450deg);
+	transform: rotateZ(450deg);
 }
