--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,9 @@ body {
     z-index: 7;
     background: rgba(0,0,0,0.7);
 }
-
+input:-webkit-autofill {
+    -webkit-box-shadow: inset 0 0 0 50px #F4F4F4; 
+}
 body.open .black-scr {
     opacity: 1;
 }
@@ -191,32 +193,27 @@ p {
 
 .breadcrumbs {
     font-size: 14px;
-    line-height: 160%;
-    color: #958371;
-    margin:86px 0 24px;
+    line-height: 170%;
+    color: #737373;
+    margin:140px 0 0;
     position: relative;
     z-index: 2;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -moz-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
     -webkit-box-align: center;
     -webkit-align-items: center;
        -moz-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-       -moz-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
 }
 
 .breadcrumbs__link {
     font-size: 14px;
-    line-height: 24px;
-    color: #958371;
+    line-height: 170%;
+    color: #737373;
     text-decoration: none;
 }
 
@@ -226,10 +223,10 @@ p {
 
 .breadcrumbs__separator {
     display: block;
-    width: 4px;
-    height: 4px;
-    background: #958371;
-    margin: 0 10px;
+    width: 2px;
+    height: 2px;
+    background:#737373;
+    margin: 0 12px;
 }
 
 /* -----------------------------Header---------------------------- */
@@ -299,6 +296,7 @@ p {
 }
 .header__nav ul > .menu-item-has-children:hover > .sub-menu {
     display: block;
+    pointer-events: visible;
 }
 .header__nav ul > .menu-item-has-children {
     position: relative;    
@@ -664,11 +662,18 @@ p {
     margin: auto 0;
     width: 10px;
     height: 8px;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
     background: url('../img/svg/arrow.svg') no-repeat 0 0 / cover;
 }
 .hiring__item:hover {
     border-bottom-color: #fff;
     text-decoration: none;
+}
+.hiring__item:hover:after {
+    right: 17px;
 }
 .hiring__item span {
     display: block;
@@ -942,7 +947,7 @@ p {
     padding: 16px 24px;
     font-size: 16px;
     line-height: 24px;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
 }
 .start__form-inp::-webkit-input-placeholder {
     color: #080808;
@@ -1112,4 +1117,235 @@ p {
     font-size: 12px;
     line-height: 170%;
     color: rgba(255,255,255,0.5);
+}
+
+
+/* ------CONTACTS----- */
+
+.back {
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -moz-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    margin-bottom: 24px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 14px;
+    line-height: 170%;
+    color: #737373;
+}
+.back svg {
+    margin-right: 14px;
+}
+.contact {
+    padding: 84px 0 140px;
+}
+
+.contact .title-l {
+    margin-bottom: 8px;
+}
+.contact p {
+    width: 90%;
+    margin-bottom: 43px;
+}
+
+.cont__form-wrap {
+    background: #F4F4F4;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+}
+
+.cont__form-att {
+    padding: 18px 20px 0;
+    margin-bottom: 40px;
+    width: 100%;
+}
+.cont__form-att-wrap {
+    background: #FFFFFF;
+    border: 2px dashed #E7E7E7;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    padding: 16px 55px;
+    position: relative;
+}
+.cont__form-att-wrap::before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 18px;
+    height: 20px;
+    top: 18px;
+    left: 18px;
+    background: url('../img/svg/skr.svg') no-repeat 0 0 / cover;
+}
+.att-clear {
+    position: absolute;
+    top: 32px;
+    right: 28px;
+    display: none;
+}
+.att-clear.show {
+    display: block;
+    cursor: pointer;
+}
+.cont__form-att-inp {
+    display: none;
+}
+.cont__form-att-wrap span {
+    display: block;
+}
+.cont__form-att-wrap label {
+    cursor: pointer;
+}
+.cont__form-file {
+    font-size: 16px;
+    line-height: 24px;
+}
+.cont__form-size {
+    font-size: 12px;
+    line-height: 24px;
+    opacity: 0.5;
+}
+.contact .start__form-tawrap {
+    margin-bottom: 16px;
+}
+
+.cont__form-att-wrap.check {
+    border: 2px solid #080808;
+}
+
+
+/* ---CONSULT--- */
+
+.serv {
+    padding: 25px 0 140px;
+}
+.serv__wrap p {
+    margin-bottom: 10px;
+}
+.serv__wrap .wp-block-image {
+    margin: 48px auto 67px;
+    max-width: 716px;
+    padding: 0;
+    background: #FFFFFF;
+    -webkit-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05), 0px 10px 20px rgba(0, 0, 0, 0.1);
+       -moz-box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05), 0px 10px 20px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.05), 0px 10px 20px rgba(0, 0, 0, 0.1);
+    -webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;
+}
+.serv__wrap .wp-block-image img {
+    width: 100%;
+    height: auto;
+}
+.serv__wrap h3 {
+    margin: 40px 0 17px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 150%;
+}
+.serv__wrap .btn {
+    margin-top: 47px;
+    padding: 20px 41px;
+}
+
+.cons-case {
+    background: #080808;
+    color: #fff;
+}
+
+.cons-case .proud__item:hover .proud__item-right {
+    background: #181818;
+}
+.cons-case .proud__item:first-child {
+    border-top: 1px solid #232323;
+}
+.cons-case .proud__item {
+    border-bottom: 1px solid #232323;
+}
+.cons-case .proud__item-perc {
+    color: #fff !important;
+}
+.cons-case .proud__item-right {
+    background: #0E0E0E;
+}
+.cons-case .btn__sec {
+    border: 2px solid #FFFFFF;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    color: #fff;
+    background: transparent;
+}
+.cons-case .btn__sec path {
+    fill: #fff;
+}
+.cons-case .btn__sec:hover {
+    background: #fff;
+    color: #080808;
+}
+.cons-case .btn__sec:hover path {
+    fill: #080808;
+}
+.cons-how .how__card:nth-last-child(2) {
+    border-bottom: 1px solid rgba(0,0,0,0.1) !important;
+}
+
+.cons-start {
+    background: #0E0E0E;
+    color: #fff;
+}
+.cons-start p {
+    margin-bottom: 50px;
+}
+.cons-start .start__form-tawrap {
+    margin-bottom: 49px;
+}
+.cons-start .start__form-inp {
+    background: #171717;
+    color: rgba(255,255,255,0.5);
+}
+.cons-start .start__form-inp::-webkit-input-placeholder {
+    color: rgba(255,255,255,0.5);
+}
+.cons-start .start__form-inp:-moz-placeholder {
+    color: rgba(255,255,255,0.5);
+}
+.cons-start .start__form-inp::-moz-placeholder {
+    color: rgba(255,255,255,0.5);
+}
+.cons-start .start__form-inp:-ms-input-placeholder {
+    color: rgba(255,255,255,0.5);
+}
+.cons-start .start__form-inp::-ms-input-placeholder {
+    color: rgba(255,255,255,0.5);
+}
+.cons-start .start__form-inp::placeholder {
+    color: rgba(255,255,255,0.5);
+}
+.send-btn {
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.cons-start .send-btn {
+    background: #fff;
+    color: #080808;
+    border: 2px solid #FFFFFF;
+    padding: 14px 27px;
+}
+.cons-start .send-btn:hover {
+    background: #0E0E0E;
+    color: #fff;
 }
