--- a/css/mobile.css
+++ b/css/mobile.css
@@ -21,7 +21,7 @@
     top: 0;
     padding: 70px 0 30px;
     right: -100%;
-    min-height: 100vh;
+    height: 90vh;
     background-color: #fff;
     overflow: hidden;
     -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 1, 1, 0.15);
@@ -40,6 +40,7 @@
     -o-transition: 0.8s;
     -moz-transition: 0.8s;
     transition: 0.8s;
+    overflow-y: scroll;
   }
   .header__nav > ul {
     -webkit-box-orient: vertical;
@@ -201,6 +202,20 @@
   .header__nav ul > .menu-item {
     margin-right:  0 !important;
 }
+.sub-menu {
+  background: none;
+  -webkit-box-shadow: none;
+     -moz-box-shadow: none;
+          box-shadow: none;
+  position: relative;
+  top: unset;
+  left: unset;
+  min-width: unset;
+  padding: 24px 32px 18px;
+}
+.sub-menu li a {
+  color: #080808;
+}
 }
 
 /* 577-768px */
@@ -292,6 +307,18 @@ p {
 }
 .method__who {
   margin-bottom: 30px;
+}
+.cont__form-mess {
+  width: 100%;
+}
+.breadcrumbs {
+  margin-top: 45px;
+}
+.serv {
+  padding-bottom: 50px;
+}
+.serv__wrap .wp-block-image {
+  margin: 24px 0;
 }
 }
 
@@ -392,5 +419,8 @@ p {
 }
 .footer__item a {
   font-size: 20px;
+}
+.cont__form-radio:not(:last-child) {
+  margin-right: 15px;
 }
 }
