--- a/css/main.css
+++ b/css/main.css
@@ -1596,3 +1596,95 @@ p {
 .page-bl__soclink:hover {
     text-decoration: none;
 }
+
+
+/* ---author--- */
+.page-auth {
+    padding-top: 32px;
+}
+
+.page-auth__top {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 22px;
+}
+.page-auth-img {
+    -webkit-border-radius: 50%;
+       -moz-border-radius: 50%;
+            border-radius: 50%;
+    overflow: hidden;
+    width: 96px;
+    height: 96px;
+    margin-right: 32px;
+}
+.page-auth-img img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+}
+.page-auth .title-l {
+    margin-bottom: 12px;
+}
+.page-auth__soc {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+.page-auth__link:not(:last-child) {
+    margin-right: 8px;
+}
+.page-auth__link {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 32px;
+    height: 32px;
+    background: #F7F7F7;
+    -webkit-border-radius: 6px;
+       -moz-border-radius: 6px;
+            border-radius: 6px;
+}
+.page-auth__link path  {
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+.page-auth__link:hover path {
+    fill: #aaa;
+    stroke: #aaa;
+}
+.page-auth__descr {
+    padding-bottom: 34px;
+    margin-bottom: 48px;
+    border-bottom: 1px solid #F4F4F4;
+}
