--- a/css/main.css
+++ b/css/main.css
@@ -291,26 +291,27 @@ p {
 .header__nav ul > .menu-item:not(:last-child) {
     margin-right: 40px;
 }
-.header__nav ul > .menu-item {
+.header__nav > ul > .menu-item {
    padding-bottom: 16px;
 }
 .header__nav ul > .menu-item-has-children:hover > .sub-menu {
     display: block;
     pointer-events: visible;
 }
-.header__nav ul > .menu-item-has-children {
+.header__nav ul > .menu-item-has-children,
+.header__nav ul > .menu_item_wpglobus_menu_switch {
     position: relative;    
  }
- .header__nav ul > .menu-item > a {
+ .header__nav > ul > .menu-item > a {
     font-weight: 700;
     font-size: 16px;
     line-height: 160%;
     color: #080808;
  } 
- .header__nav ul > .menu-item > a:hover {
+ .header__nav > ul > .menu-item > a:hover {
      text-decoration: none;
  }
- .header__nav ul > .menu-item.transp a {
+ .header__nav > ul > .menu-item.transp a {
     opacity: .3;
  }
 
@@ -923,7 +924,8 @@ p {
 .start p {
     margin-bottom: 24px;
 }
-.start__form {
+.start__form,
+.start__form form {
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -934,9 +936,13 @@ p {
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
 }
+.home__form {
+    margin: 0;
+}
 .start__form-wrap {
+    position: relative;
     width: 50%;
-    padding: 18px 20px ;
+    padding: 18px 20px;
 }
 .start__form-inp {
     width: 100%;
@@ -945,6 +951,7 @@ p {
        -moz-border-radius: 4px;
             border-radius: 4px;
     padding: 16px 24px;
+    padding-right: 40px;
     font-size: 16px;
     line-height: 24px;
     font-family: 'Roboto', sans-serif;
@@ -974,6 +981,12 @@ p {
     opacity: 0.5;
 }
 .start__form-tawrap {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
     width: 100%;
     margin-bottom: 40px;
     padding: 16px 20px 0;
@@ -1350,10 +1363,72 @@ p {
     color: #fff;
 }
 
+
+
+
+
+.wpcf7-not-valid-tip {
+    display: inline-block;
+    font-size: 11px;
+    position: absolute;
+    top: -30px;
+    left: 0;
+    color: white;
+    border: 1px solid red;
+    padding: 5px 10px;
+    line-height: 1.1;
+    background: red;
+    -webkit-box-shadow: 0 0 3px 0px rgba(0, 0, 0, 0.3);
+       -moz-box-shadow: 0 0 3px 0px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 3px 0px rgba(0, 0, 0, 0.3);
+}
+.wpcf7-not-valid-tip:after {
+    content: '';
+    position: absolute;
+    left: 20px;
+    bottom: -10px;
+    border: 5px solid transparent;
+    border-top: 5px solid red;
+}
+.wpcf7-not-valid {
+    border: 1px solid red;
+}
+.wpcf7-form.sent .wpcf7-response-output,
+.wpcf7-form.invalid .wpcf7-response-output {
+    width: 100%;
+    background: rgba(0, 128, 0, 0.5);
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    margin: 20px auto;
+    -webkit-border-radius: 3px;
+       -moz-border-radius: 3px;
+            border-radius: 3px;
+    border: none;
+}
+.home__form .wpcf7-form.sent .wpcf7-response-output,
+.home__form .wpcf7-form.invalid .wpcf7-response-output {
+    margin: 20px;
+}
+.wpcf7-form.invalid .wpcf7-response-output {
+    background: rgb(128 0 0 / 50%);
+}
+.start__form [data-required]:after {
+    content: '*';
+    position: absolute;
+    right: 40px;
+    top: 38px;
+    color: red;
+}
+.wpcf7-form-control-wrap {
+    display: inline-block;
+    width: 100%;
+}
+
 /* ---blog--- */
 
 .page-bl {
-    padding-bottom: 140px;
+    padding: 26px 0 140px;
 }
 .page-bl__tabs {
     background: #F1F1F1;
@@ -1416,7 +1491,7 @@ p {
     width: 50%;
 }
 .page-bl__link {
-    margin-bottom: 100px;
+    margin-bottom: 95px;
     display: inline-block;
 }
 .page-bl__link:hover {
@@ -1463,7 +1538,7 @@ p {
     left: 20px;
     right: 20px;
     bottom: 36px;
-    padding: 26px 0;
+    padding: 24px 0;
     display: -webkit-box;
     display: -webkit-flex;
     display: -moz-box;
@@ -1496,7 +1571,7 @@ p {
     display: -moz-box;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 12px;
+    margin-top: 13px;
     font-weight: bold;
     font-size: 14px;
     line-height: 170%;
@@ -1540,7 +1615,7 @@ p {
             align-items: center;
     font-size: 12px;
     line-height: 20px;
-    padding-right: 22px;
+    padding-right: 26px;
     border-right: 1px solid #F4F4F4;
     cursor: pointer;
 }
@@ -1633,7 +1708,7 @@ p {
        object-fit: cover;
 }
 .page-auth .title-l {
-    margin-bottom: 12px;
+    margin-bottom: 8px;
 }
 .page-auth__soc {
     display: -webkit-box;
@@ -1687,4 +1762,166 @@ p {
     padding-bottom: 34px;
     margin-bottom: 48px;
     border-bottom: 1px solid #F4F4F4;
+}
+
+/* ---article--- */
+
+.art-main {
+    margin-top: 50px;
+    text-align: center;
+    position: relative;
+    padding: 116px 0;
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.25)), to(rgba(0, 0, 0, 0.25))), url('../img/demo/art-bg.png') no-repeat center center / cover;
+    background: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../img/demo/art-bg.png') no-repeat center center / cover;
+    background: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../img/demo/art-bg.png') no-repeat center center / cover;
+    background: -o-linear-gradient(bottom, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../img/demo/art-bg.png') no-repeat center center / cover;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url('../img/demo/art-bg.png') no-repeat center center / cover;
+}
+
+.art-main__label {
+    padding: 4px 8px;
+    background: #080808;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 170%;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 28px;
+    display: inline-block;
+}
+.art-main .title-l {
+    max-width: 582px;
+    color: #FFFFFF;
+    text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
+    margin: 0 auto 24px;
+}
+.art-main .page-bl__meta {
+    margin: 0 auto;
+    color: #FFFFFF;
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -moz-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    opacity: 1;
+    font-size: 12px;
+}
+.art-main .page-bl__meta a {
+    color: #FFFFFF;
+    display: inline-block;
+    margin-left: 4px;
+}
+.art {
+    padding: 72px 0 104px;
+}
+.art__wrap {
+    position: relative;
+}
+.art__sidebar {
+    position: absolute;
+    top: 0;
+    left: -61px;
+}
+.art__sidebar-wrap span {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 170%;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    display: block;
+}
+.art__soc {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+}
+.art__soc-item {
+    background: #FFFFFF;
+    -webkit-box-shadow: 0px 2px 4px rgba(19, 92, 182, 0.2), 0px 0px 4px rgba(0, 0, 0, 0.1);
+       -moz-box-shadow: 0px 2px 4px rgba(19, 92, 182, 0.2), 0px 0px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 2px 4px rgba(19, 92, 182, 0.2), 0px 0px 4px rgba(0, 0, 0, 0.1);
+    width: 42px;
+    height: 42px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-weight: 900;
+    font-size: 19px;
+    line-height: 100%;
+    color: #135CB6;
+    -webkit-border-radius: 50%;
+       -moz-border-radius: 50%;
+            border-radius: 50%;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
+.art__soc-item:not(:last-child) {
+    margin-bottom: 12px;
+}
+.art__text {
+    padding: 0 70px;
+}
+.art__text p {
+    font-family: "PT Serif";
+    font-size: 19px;
+    line-height: 34px;
+}
+.art__text p:not(:last-child) {
+    margin-bottom: 20px;
+}
+.art__text h2 {
+    margin-bottom: 48px;
+    font-weight: 700;
+    font-size: 31px;
+    line-height: 48px;
+}
+.art__text h2:not(:first-child) {
+    margin-top: 64px;
+}
+.art__text .wp-block-image {
+    margin: 0 0 48px;
+}
+.art__text .wp-block-image:not(:first-child) {
+    margin-top: 40px;
+}
+.art__text .wp-block-image img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+.art__text .wp-block-image img:not(:last-child) {
+    margin-bottom: 24px;
+}
+.art__text .wp-block-image figcaption {
+    font-family: "PT Serif";
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #777777;
 }
