--- a/css/main.css
+++ b/css/main.css
@@ -1756,8 +1756,7 @@ p {
     transition: all 0.3s ease;
 }
 .page-auth__link:hover path {
-    fill: #aaa;
-    stroke: #aaa;
+    opacity: 1;
 }
 .page-auth__descr {
     padding-bottom: 34px;
@@ -1768,7 +1767,7 @@ p {
 /* ---article--- */
 
 .art-main {
-    margin-top: 50px;
+    margin-top: 47px;
     text-align: center;
     position: relative;
     padding: 116px 0;
@@ -1788,14 +1787,16 @@ p {
     letter-spacing: 0.05em;
     text-transform: uppercase;
     color: #FFFFFF;
-    margin-bottom: 28px;
+    margin-bottom: 25px;
     display: inline-block;
 }
 .art-main .title-l {
     max-width: 582px;
     color: #FFFFFF;
     text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.25);
-    margin: 0 auto 24px;
+    margin: 0 auto 20px;
+    font-size: 40px;
+    line-height: 130%;
 }
 .art-main .page-bl__meta {
     margin: 0 auto;
@@ -1882,6 +1883,12 @@ p {
         -ms-flex-pack: center;
             justify-content: center;
 }
+.art__soc-item:hover {
+    text-decoration: none;
+    -webkit-box-shadow: 0px 2px 12px rgba(19, 92, 182, 0.2), 0px 0px 4px rgba(0, 0, 0, 0.1);
+       -moz-box-shadow: 0px 2px 12px rgba(19, 92, 182, 0.2), 0px 0px 4px rgba(0, 0, 0, 0.1);
+            box-shadow: 0px 2px 12px rgba(19, 92, 182, 0.2), 0px 0px 4px rgba(0, 0, 0, 0.1);
+}
 .art__soc-item:not(:last-child) {
     margin-bottom: 12px;
 }
@@ -1894,10 +1901,10 @@ p {
     line-height: 34px;
 }
 .art__text p:not(:last-child) {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 .art__text h2 {
-    margin-bottom: 48px;
+    margin-bottom: 24px;
     font-weight: 700;
     font-size: 31px;
     line-height: 48px;
@@ -1909,7 +1916,7 @@ p {
     margin: 0 0 48px;
 }
 .art__text .wp-block-image:not(:first-child) {
-    margin-top: 40px;
+    margin-top: 48px;
 }
 .art__text .wp-block-image img {
     width: 100%;
@@ -1925,4 +1932,206 @@ p {
     line-height: 20px;
     text-align: center;
     color: #777777;
+}
+
+.art__bottom {
+    padding: 0 70px;
+}
+.art__s {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 71px 0 17px;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+.art__heart {
+    background: #FFFFFF;
+    color: #14C6C6;
+    border: 1px solid #F2F2F2;
+    -webkit-border-radius: 50px;
+       -moz-border-radius: 50px;
+            border-radius: 50px;
+    padding: 8px 14px;
+    line-height: 15px;
+    font-weight: 700;
+    margin-right: 6px;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+.art__heart path {
+    stroke: #14C6C6;
+    fill: #14C6C6;
+}
+.art__soclinks {
+    padding: 0;
+}
+.art__soclinks a {
+    background: #FFFFFF;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    border: 1px solid #F2F2F2;
+    -webkit-border-radius: 50%;
+       -moz-border-radius: 50%;
+            border-radius: 50%;
+    width: 32px;
+    height: 32px;
+    font-size: 15px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
+.art__soclinks a:not(:last-child) {
+    margin-right: 6px;
+}
+.art__auth {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+       -moz-box-orient: vertical;
+       -moz-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+}
+
+.art__auth-help {
+    position: relative;
+    width: 100%;
+    margin-bottom: 32px;
+}
+
+.art__auth-help::before {
+    content: '';
+    display: block;
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto 0;
+    z-index: 1;
+    background: #F4F4F4;
+}
+.art__foto {
+    width: 160px;
+    background: #fff;
+    position: relative;
+    z-index: 2;
+    margin: 0 auto;
+}
+.art__foto-wrap {
+    width: 112px;
+    height: 112px;
+    -webkit-border-radius: 50%;
+       -moz-border-radius: 50%;
+            border-radius: 50%;
+    overflow: hidden;
+    margin: 0 auto;
+}
+.art__foto-wrap img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    -o-object-fit: cover;
+       object-fit: cover;
+}
+.art__title {
+    font-weight: 700;
+    font-size: 21px;
+    line-height: 34px;
+    margin-bottom: 16px;
+}
+.art__auth p {
+    text-align: center;
+    margin-bottom: 32px;
+    line-height: 160%;
+    font-size: 17px;
+}
+.art__auth__link {
+    width: 32px;
+    height: 32px;
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -moz-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+       -moz-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
+.art__auth__link:hover path {
+    opacity: 1;
+}
+
+.related {
+    padding: 112px 0 127px;
+    background: #F7F7F7;
+}
+
+.related .title-l {
+    margin-bottom: 72px;
+}
+.related .page-bl__link {
+    margin-bottom: 0;
+}
+
+/* ----404---- */
+
+.nopage {
+    padding: 135px 0 164px;
+}
+
+.nopage__title {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 120%;
+    margin-bottom: 24px;
+}
+.nopage p {
+    margin-bottom: 32px;
+    max-width: 559px;
+}
+
+.nopage .btn {
+    padding: 16px 48px;
+}
+.portf-page {
+    padding-top: 26px;
 }
